--- a/Projects/rootrip-recommendation/rootrip-v1.ipynb
+++ b/Projects/rootrip-recommendation/rootrip-v1.ipynb
@@ -5,7 +5,8 @@
    "id": "f74cdfa6-eb65-4aaa-b2c8-437a4bad1652",
    "metadata": {},
    "source": [
-    "# RooTrip 추천 시스템 v1"
+    "# RooTrip 추천 시스템 v1\n",
+    "### - 저장되어있는 Hashtag를 입력하여 가장 비슷한 게시글의 Hashtag가 있는 게시글 추천"
    ]
   },
   {
