rootrip 추천 시스템

--- a/Projects/rootrip-recommendation/rootrip-v3.ipynb
+++ b/Projects/rootrip-recommendation/rootrip-v3.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "923d7d1d-f8ea-44ff-97e8-814d71e98b85",
    "metadata": {},
    "outputs": [
@@ -19,21 +19,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id                                            Hashtag user\n",
-      "0   1   [{\"tag\":\"어트랙션\", \"like\":2},{\"tag\":\"여행\",\"like\":4}]   1번\n",
-      "1   2      [{\"tag\":\"바다\",\"like\":1},{\"tag\":\"여행\",\"like\":4}]   2번\n",
-      "2   3  [{\"tag\":\"산\",\"like\":1},{\"tag\":\"바다\",\"like\":1},{\"...   3번\n",
-      "3   4  [{\"tag\":\"부산\",\"like\":11},{\"tag\":\"바다\",\"like\":1},...   4번\n",
-      "   id                                    Hashtag        like      title\n",
-      "0   1              [{\"tag\":\"어트랙션\"},{\"tag\":\"여행\"}]        1234    어트랙션 여행\n",
-      "1   2                [{\"tag\":\"바다\"},{\"tag\":\"여행\"}]      124124      바다 여행\n",
-      "2   3    [{\"tag\":\"산\"},{\"tag\":\"바다\"},{\"tag\":\"관광\"}]         211    산 바다 여행\n",
-      "3   4  [{\"tag\":\"부산\"},{\"tag\":\"바다\"},{\"tag\":\"해운대\"}]  1232145123  부산 바다 해운대\n",
-      "   id                                            Hashtag  user      title\n",
-      "0   1  [{\"tag\": \"어트랙션\", \"like\": 2}, {\"tag\": \"여행\", \"li...     1    어트랙션 여행\n",
-      "1   2  [{\"tag\": \"바다\", \"like\": 1}, {\"tag\": \"여행\", \"like...     2      바다 여행\n",
-      "2   3  [{\"tag\": \"산\", \"like\": 1}, {\"tag\": \"바다\", \"like\"...     3    산 바다 관광\n",
-      "3   4  [{\"tag\": \"부산\", \"like\": 11}, {\"tag\": \"바다\", \"lik...     4  부산 바다 해운대\n"
+      "   id        Hashtag  user      title\n",
+      "0   1   [1, 4, 2, 3]     1    어트랙션 여행\n",
+      "1   2  [2, 4, 10, 2]     2      바다 여행\n",
+      "2   3   [5, 1, 2, 3]     3    산 바다 관광\n",
+      "3   4  [3, 0, 4, 11]     4  부산 바다 해운대\n"
      ]
     }
    ],
@@ -62,11 +52,11 @@
     "\n",
     "# os.chdir('/Users/woojjam/Desktop/study/machine-learning/Projects/rootrip-recommendation')\n",
     "\n",
-    "df1 = pd.read_csv('rootrip-user-like-weight.csv')\n",
-    "print(df1)\n",
+    "# df1 = pd.read_csv('rootrip-user-like-weight.csv')\n",
+    "# print(df1)\n",
     "\n",
-    "df11 = pd.read_csv('rootrip-board.csv')\n",
-    "print(df11)\n",
+    "# df11 = pd.read_csv('rootrip-board.csv')\n",
+    "# print(df11)\n",
     "                  \n",
     "df2 = pd.DataFrame(data)\n",
     "print(df2)"
@@ -150,7 +140,7 @@
    ],
    "source": [
     "# JSON 데이터를 파이썬 객체로 변환\n",
-    "df1['Hashtag'] = df1['Hashtag'].apply(lambda x: json.loads(x.replace('\\'', '\\\"')))\n",
+    "# df1['Hashtag'] = df1['Hashtag'].apply(lambda x: json.loads(x.replace('\\'', '\\\"')))\n",
     "df1"
    ]
   },
@@ -168,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "29628b3e-4cfe-4fde-83b4-624d1a4d1a44",
    "metadata": {
     "tags": []
@@ -186,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "1ac3668b-4239-40f9-b163-441658daa201",
    "metadata": {
     "tags": []
@@ -216,6 +206,7 @@
        "      <th>id</th>\n",
        "      <th>Hashtag</th>\n",
        "      <th>user</th>\n",
+       "      <th>title</th>\n",
        "      <th>soup</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -223,50 +214,54 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>[{'tag': '어트랙션', 'like': 2}, {'tag': '여행', 'li...</td>\n",
-       "      <td>1번</td>\n",
-       "      <td>어트랙션 어트랙션 여행 여행 여행 여행</td>\n",
+       "      <td>[1, 4, 2, 3]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>어트랙션 여행</td>\n",
+       "      <td>어트랙션 여행 여행 여행 여행 바다 바다 어트랙션 어트랙션 어트랙션</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>[{'tag': '바다', 'like': 1}, {'tag': '여행', 'like...</td>\n",
-       "      <td>2번</td>\n",
-       "      <td>바다 여행 여행 여행 여행</td>\n",
+       "      <td>[2, 4, 10, 2]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>바다 여행</td>\n",
+       "      <td>어트랙션 어트랙션 여행 여행 여행 여행 바다 바다 바다 바다 바다 바다 바다 바다 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>[{'tag': '산', 'like': 1}, {'tag': '바다', 'like'...</td>\n",
-       "      <td>3번</td>\n",
-       "      <td>산 바다 관광 관광</td>\n",
+       "      <td>[5, 1, 2, 3]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>산 바다 관광</td>\n",
+       "      <td>어트랙션 어트랙션 어트랙션 어트랙션 어트랙션 여행 바다 바다 어트랙션 어트랙션 어트랙션</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>[{'tag': '부산', 'like': 11}, {'tag': '바다', 'lik...</td>\n",
-       "      <td>4번</td>\n",
-       "      <td>부산 부산 부산 부산 부산 부산 부산 부산 부산 부산 부산 바다 해운대 해운대</td>\n",
+       "      <td>[3, 0, 4, 11]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>부산 바다 해운대</td>\n",
+       "      <td>어트랙션 어트랙션 어트랙션 바다 바다 바다 바다 어트랙션 어트랙션 어트랙션 어트랙션...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id                                            Hashtag user  \\\n",
-       "0   1  [{'tag': '어트랙션', 'like': 2}, {'tag': '여행', 'li...   1번   \n",
-       "1   2  [{'tag': '바다', 'like': 1}, {'tag': '여행', 'like...   2번   \n",
-       "2   3  [{'tag': '산', 'like': 1}, {'tag': '바다', 'like'...   3번   \n",
-       "3   4  [{'tag': '부산', 'like': 11}, {'tag': '바다', 'lik...   4번   \n",
+       "   id        Hashtag  user      title  \\\n",
+       "0   1   [1, 4, 2, 3]     1    어트랙션 여행   \n",
+       "1   2  [2, 4, 10, 2]     2      바다 여행   \n",
+       "2   3   [5, 1, 2, 3]     3    산 바다 관광   \n",
+       "3   4  [3, 0, 4, 11]     4  부산 바다 해운대   \n",
        "\n",
-       "                                          soup  \n",
-       "0                        어트랙션 어트랙션 여행 여행 여행 여행  \n",
-       "1                               바다 여행 여행 여행 여행  \n",
-       "2                                   산 바다 관광 관광  \n",
-       "3  부산 부산 부산 부산 부산 부산 부산 부산 부산 부산 부산 바다 해운대 해운대  "
+       "                                                soup  \n",
+       "0              어트랙션 여행 여행 여행 여행 바다 바다 어트랙션 어트랙션 어트랙션  \n",
+       "1  어트랙션 어트랙션 여행 여행 여행 여행 바다 바다 바다 바다 바다 바다 바다 바다 ...  \n",
+       "2   어트랙션 어트랙션 어트랙션 어트랙션 어트랙션 여행 바다 바다 어트랙션 어트랙션 어트랙션  \n",
+       "3  어트랙션 어트랙션 어트랙션 바다 바다 바다 바다 어트랙션 어트랙션 어트랙션 어트랙션...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
